# hidden-stratification

./: pyproject.toml
src/stratification/: harness.py  run.py
src/stratification/classification/: george_classification.py
src/stratification/classification/datasets/: base.py  mnist.py
src/stratification/cluster/: fast_sil.py
src/stratification/cluster/models/: cluster.py
src/stratification/utils/: parse_args.py
